grafana-postgres/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana-pg
  labels:
    istio-injection: enabled
