grafana-postgres/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mtls-disable
  namespace: grafana-pg
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
  mtls:
    mode: DISABLE
